# assured-downstream

./: .gitignore  AGENTS.md  ARCHITECTURE.md  INTENT.md  README.md  ROADMAP.md  pyproject.toml
docs/: AGENT_OPERATING_MODEL.md  AGENT_RUNTIME.md  BUILD_EVIDENCE_CONTRACT.md  BUILD_VERIFICATION_CONTRACT.md  ECOSYSTEM_BUILD_PROFILES.md  RELEASE_VERIFICATION_CONTRACT.md  RESEARCH.md  VALIDATION_PLAN.md  WBS.md  WBS_EXECUTION_PLAN.md
policies/: agent-registry.json  approved-tooling.json  build-verification-v3.json  build-verification.json  github-account-boundary.json  publication-authorization.json  release-verification.json
tests/: git_test_support.py  publication_test_support.py  test_account_boundary_assets.py  test_agent_registry.py  test_agent_store.py  test_attestations.py  test_behavior.py  test_build_verification.py  test_build_verification_agents.py  test_build_verification_agents_v3.py  test_build_verification_v3.py  test_builder_handoff.py  test_builder_handoff_v3.py  test_catalog_workflow.py  test_checkout_pipeline.py  test_cli.py  test_codex_driver.py  test_custody.py  test_ecosystem_profile.py  test_enrichment.py  test_evidence.py  test_evidence_agents.py  test_fork_apply.py  test_github_api.py  test_intake_agents.py  test_liaison.py  test_lifecycle.py  test_managed_checkout_agents.py  test_overlay.py  test_overlay_render.py  test_patch_agents.py  test_pin_resolver.py  test_pipeline.py  test_policy_eval.py  test_publication_agents.py  test_publication_authorization.py  test_publication_control.py  test_publication_control_assets.py  test_publication_ledger.py  (+22 more)
(+116 files in other folders)
