[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "saucetotal"
version = "0.1.0"
description = "Early-stage agent-driven assured downstream automation for hardened open source forks."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Assured Downstream Automation" }
]
dependencies = []

[project.scripts]
saucetotal = "assured_downstream.cli:main"
assured-downstream = "assured_downstream.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
